# TurboJS

./: .editorconfig  .gitattributes  .gitignore  CHANGELOG.md  CMakeLists.txt  CMakePresets.json  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  Makefile  NOTICE.md  README.md  RELEASE_NOTES.md  SECURITY.md  SUPPORT.md  meson.build  meson_options.txt
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: ci.yml  release-quality.yml
apps/: README.md
apps/turbojs/: main.c
apps/turbojsc/: main.c
apps/wasi-reactor/: main.c
benchmarks/: README.md
benchmarks/jit/: element_native_benchmark.c  element_native_loop_benchmark.c  element_native_unrolled_loop_benchmark.c  element_simd_benchmark.c  element_simd_bounds_benchmark.c  runtime_continuation_cache_benchmark.c
benchmarks/results/: README.md  branch-callback-inlining-comparison.json  branch-mutable-virtual-object-comparison.json  branch-state-region-baseline-v8.json  branch-state-region-comparison.json  branch-state-region-v8.json  closed-application-regions-v8.json  closure-leaf-v8.json  direct-charcodeat-comparison.json  direct-json-quoting-comparison.json  direct-json-quoting-v8.json  direct-object-literal-fields-comparison.json  direct-object-literal-fields-v8.json  direct-string-concat-comparison.json  dynamic-region-state-v8.json  event-graph-closed-regions-v8.json  fast-array-growth-comparison.json  finite-state-branch-region-v8.json  finite-state-region-v8.json  float64-simulation-region-comparison.json  float64-simulation-region-v8.json  four-slot-object-layout-comparison.json  four-slot-object-layout-v8.json  general-comparisons-variable-shifts-v8.json  general-integer-region-v8.json  lightweight-builtin-dispatch-comparison.json  lightweight-builtin-dispatch-v8.json  mutable-argument-shift-inlining-comparison.json  native-stateful-closure-comparison.json  native-stateful-closure-v8.json  native-string-hash-comparison.json  native-string-hash-v8.json  osr-multisite-negative-cache-v8.json  osr-negative-cache-fastpath-v8.json  osr-rejection-profile.json  packed-array-kinds-comparison.json  redline-dead-store-ab.json  redline-dead-store-v8.json  redline-virtual-object-v8.json  seven-slot-property-growth-comparison.json  (+10 more)
cmake/: README.md  TurboJSBenchmarks.cmake  TurboJSBuildPolicy.cmake  TurboJSGenerators.cmake  TurboJSInstall.cmake  TurboJSJITSources.cmake  TurboJSSubsystems.json  TurboJSTargets.cmake  TurboJSTests.cmake  turbojs.pc.in
docs/: README.md
docs/api/: PUBLIC_API_AND_ABI.md
docs/architecture/: ENGINE_ARCHITECTURE.md  FLOAT64_AND_SHAPES.md  SUBSYSTEM_MAP.md  array-element-specialization.md  automatic-clutch-lowering.md  automatic-tiering.md  beacon-function-registry.md  boxed-deoptimization.md  bytecode-jit-frontend.md  callable-reference.md  checked-arithmetic-bailouts.md  clutch-compiled-call-abi.md  clutch-direct-call-edge.md  clutch-recursion-and-receivers.md  clutch-selective-repatching.md  clutch-wide-call-abi.md  control-flow-lowering.md  deoptimization-frames.md  deoptimization-resume.md  direct-element-lowering.md  division-and-deoptimization.md  dual-source-simd.md  dynamic-element-indexing.md  dynamic-element-stores-and-range-analysis.md  element-loop-range-proofs.md  element-loop-unrolling.md  engine-bytecode-tiering.md  engine-callable-loads.md  execution-pipeline.md  fma3-dispatch.md  gc-safe-deoptimization.md  gearbox-inline-property-pics.md  header-layout.md  intermediate-representation.md  jit-aot-roadmap.md  jit-stack-maps.md  local-variable-lowering.md  native-continuation-segments.md  native-element-loops.md  optimizing-aot-v1.md  (+37 more)
docs/development/: CODEBASE_CONVENTIONS.md  DEBUGGING.md  DEVELOPER_GUIDE.md  FIRST_CONTRIBUTION.md  STRESS_TESTING.md  building.md  first-pass-summary.md  releasing.md  repository-layout.md  repository-maintenance.md  testing.md
docs/embedding/: EMBEDDING_GUIDE.md  README.md
docs/performance/: BENCHMARKING.md  FULL_ENGINE_NODE_V8_RC5.md  FULL_ENGINE_NODE_V8_RC6.md  PERFORMANCE_MODEL.md
docs/project/: GITHUB_RELEASE_CHECKLIST.md  PROJECT_AUDIT.md  PROVENANCE.md  README.md  RELEASE_READINESS.md  RELEASE_STATUS.md  ROADMAP.md  STATUS.md
docs/specifications/: tjm-module-format.md
docs/status/: release-status.md
docs/subsystems/: AOT_AND_SERIALIZATION.md  FRONTEND_AND_BYTECODE.md  JIT_PIPELINE.md  LANGUAGE_SERVICES.md  MEMORY_AND_GC.md  NATIVE_BACKENDS.md  OBJECT_MODEL.md  RUNTIME_AND_VM.md
examples/: README.md  optimization_profile.c
examples/embed-stable/: CMakeLists.txt  main.c
examples/jit/: arithmetic_jit.c  vm_tiering_benchmark.c
include/: README.md
include/turbojs/: export.h  jit.h  optimization.h  turbojs-libc.h  turbojs.h  turbojs_embed.h
runtime/bootstrap/: standalone.js
runtime/libc/: turbojs-libc.c
runtime/repl/: repl.js
scripts/: README.md  benchmark.py  benchmark_full_engine.py  benchmark_parity.py  benchmark_phase69.py  benchmark_regression.py  benchmark_sustained.py  benchmark_v8.py  benchmark_warm.py  benchmark_whole_engine.py  build-windows.ps1  build.py  check_markdown_links.py  clean.py  common.py  configure.py  fetch_test262.py  package.py  profile_osr_rejections.py  run.bat  run.ps1  run.sh  sanitize.py  test.py  test262.py  test262_analyze.py  validate.py
src/: README.md  engine.c  subsystems.json
src/api/: README.md  jit.h  legacy_api.c  optimization.h  turbojs-libc.c  turbojs-libc.h  turbojs.h  turbojs_embed.c
src/builtins/: array_buffer_builtin.c  array_builtin.c  bigint_builtin.c  collection_builtin.c  date_eval_builtin.c  function_builtin.c  function_runtime.c  json_builtin.c  number_math_builtin.c  object_builtin.c  object_runtime.c  promise_builtin.c  promise_hooks_api.c  reflect_proxy_builtin.c  regexp_builtin.c  string_builtin.c  symbol_builtin.c  typed_array_builtin.c  weakref_dom_builtin.c
src/compiler/: README.md  lexer.c  parser_expressions.c  parser_state.c  parser_statements_bytecode.c
src/core/: allocation_core.c  atom_conversion.c  atom_table.c  context_access_api.c  value_tags.c  (+2 more)
tests/: README.md
tools/: README.md
(+356 files in other folders)
